--- a/OnionConsumeWebAPI/Views/AATripsell/_TripsellPatialView.cshtml
+++ b/OnionConsumeWebAPI/Views/AATripsell/_TripsellPatialView.cshtml
@@ -309,12 +309,12 @@
                                                 Economy:  @Faretype<b>Xpress lite</b>
                                                 <span class="tooltiptext">
                                                     <ul>
-                                                        <li>1: CABIN BAG: 0</li>
-                                                        <li>2: CHECK-IN: 0</li>
-                                                        <li>3: CANCELLATION: </li>
-                                                        <li>4: DATE CHANGE: </li>
-                                                        <li>5: SEAT : </li>
-                                                        <li>6: MEAL : </li>
+                                                        <li>1: CABIN BAG: 7 (kg)</li>
+                                                        <li>2: CHECK-IN: -</li>
+                                                        <li>3: CANCELLATION: 4000 (Upto 2 hrs before departure)</li>
+                                                        <li>4: DATE CHANGE: 3000 (Upto 2 hrs before departure)</li>
+                                                        <li>5: SEAT : Chargeable</li>
+                                                        <li>6: MEAL : Chargeable</li>
                                                        
                                                     </ul>
                                                 </span>
@@ -328,12 +328,11 @@
                                                 <span class="tooltiptext">
                                                     <ul>
                                                         <li>1: CABIN BAG: 7 k.g</li>
-                                                        <li>2: CHECK-IN: 25 k.g  (1 piece)</li>
-                                                        <li>3: CANCELLATION: 3500 :-  (upto 2 hrs prior from departure)</li>
-                                                        <li>4: DATE CHANGE: 3000 :-  FREE  (upto 2 hrs prior from departure)</li>
-                                                        <li>5: SEAT : (Free seats)</li>
-                                                        <li>6: MEAL : (Free meal) per person</li>
-                                                        @* <li>7: Category Class : (Business)</li>*@
+                                                        <li>2: CHECK-IN: 25 k.g</li>
+                                                        <li>3: CANCELLATION: 4000 (Upto 2 hrs before departure)</li>
+                                                        <li>4: DATE CHANGE: 3000 (Upto 2 hrs before departure)</li>
+                                                        <li>5: SEAT : Free</li>
+                                                        <li>6: MEAL : Free</li>
                                                     </ul>
                                                 </span>
                                             </span>
@@ -455,8 +454,8 @@
 
                                             </tr>
                                             <tr>
-                                                <td>0</td>
-                                                <td>0</td>
+                                                <td>Upto 2 hrs before departure</td>
+                                                <td>Rs. 4000</td>
 
                                             </tr>
 
@@ -471,8 +470,8 @@
 
                                             </tr>
                                             <tr>
-                                                <td>2 hrs prior from departure</td>
-                                                <td>Rs.3500 per adult</td>
+                                                <td>Upto 2 hrs before departure</td>
+                                                <td>Rs.4000</td>
 
                                             </tr>
 
@@ -531,8 +530,8 @@
 
                                             </tr>
                                             <tr>
-                                                <td>2 hrs prior from departure</td>
-                                                <td>Rs.3000 per adult</td>
+                                                <td>Upto 72 hrs before departure</td>
+                                                <td>Rs.3250</td>
 
                                             </tr>
 
@@ -547,8 +546,8 @@
 
                                             </tr>
                                             <tr>
-                                                <td>2 hrs prior from departure</td>
-                                                <td>Free</td>
+                                                <td>Upto 72 hrs before departure</td>
+                                                <td>Rs. 3000</td>
 
                                             </tr>
 
@@ -563,8 +562,8 @@
 
                                             </tr>
                                             <tr>
-                                                <td>0</td>
-                                                <td>0</td>
+                                                <td>Upto 2 hrs before departure</td>
+                                                <td>Rs. 3000</td>
 
                                             </tr>
 
@@ -579,8 +578,8 @@
 
                                             </tr>
                                             <tr>
-                                                <td>2 hrs prior from departure</td>
-                                                <td>Rs.3000 per adult</td>
+                                                <td>Upto 2 hrs before departure</td>
+                                                <td>Rs.3000</td>
 
                                             </tr>
 
