--- a/OnionConsumeWebAPI/Views/GDSTripsell/_GDSTravellerInfoPartialView.cshtml
+++ b/OnionConsumeWebAPI/Views/GDSTripsell/_GDSTravellerInfoPartialView.cshtml
@@ -11,7 +11,9 @@
     </div>
 
     <form asp-action="IndigoTravllerDetails" asp-controller="IndigoTripsell" method="post" id="passengerForm">
-
+        @{
+            int inafantIdx = 0;
+        }
         @for (var i = 0; i < Model.passeengerlist.passengers.Count; i++)
         {
             <input type="hidden" name="passengers[@i].origin" value="@Model.passeengerlist.journeys[0].designator.origin" />
@@ -26,7 +28,24 @@
 
             <div class="row">
                 <div class="col-md-1">
-                    <select name="passengerdetails[@i].Title" class="form-control" asp-items="@ViewBag.Title"></select>
+                    @*   <select name="passengerdetails[@i].Title" class="form-control text-center" asp-items="@ViewBag.Title"></select> *@
+                    @if (Model.passeengerlist.passengers[i].passengerTypeCode == "ADT")
+                    {
+                        <select name="passengerdetails[@i].Title" class="form-control text-center" style="border: 1px solid var(--color-border);">
+                            <option value="Mr">MR</option>
+                            <option value="Ms">MS</option>
+                            <option value="Mrs">Mrs.</option>
+
+                        </select>
+                    }
+                    else if (Model.passeengerlist.passengers[i].passengerTypeCode == "CHD" || Model.passeengerlist.passengers[i].passengerTypeCode == "INF")
+                    {
+                        <select name="passengerdetails[@i].Title" class="form-control text-center" style="border: 1px solid var(--color-border);">
+                            <option value="MSTR">Master</option>
+                            <option value="Miss">Miss</option>
+
+                        </select>
+                    }
                 </div>
                 <div class="col-md-3 inputFirstname">
                     <div class="form-input">
@@ -50,7 +69,7 @@
                     if (Model.passeengerlist.passengers[i].passengerTypeCode == "ADT" || Model.passeengerlist.passengers[i].passengerTypeCode == "CHD")
                     {
                         <div class="col-md-3">
-                            <div class="form-input"><input type="text" data-validate="email" class="contactemail validate-field" maxlength="266" oninput="validateInputI(event,@i)" id="contactemailID" placeholder="email" name="passengerdetails[@i].email" required /></div>
+                            <div class="form-input"><input type="text" maxlength="30" data-validate="email" class="contactemail validate-field" maxlength="266" oninput="validateInputI(event,@i)" id="contactemailID" placeholder="email" name="passengerdetails[@i].email" required /></div>
                         </div>
                         <p class="error-message error-emailname" style="display:none"></p>
                         <p class="error-message-val " style="display:none"></p>
@@ -65,7 +84,7 @@
                     {
                         <div class="col-md-4 infant-dob-input ">
                             <div class="form-input dobinput d-flex">
-                                <div class="dob-picker">
+                               @* <div class="dob-picker">
                                     <select class="brd-none day-select" name="passengerdetails[@i].day" required>
                                         <option value="" disabled selected>Day</option>
                                     </select>
@@ -87,12 +106,70 @@
                                     <select class="brd-none year-select" name="passengerdetails[@i].year" required>
                                         <option value="" disabled selected>Year</option>
                                     </select>
+                                </div> *@
+                                <div class="dob-picker">
+                                    <select class="brd-none year-select" id="year_@inafantIdx" required>
+                                        <option value="" disabled selected>Year</option>
+                                        <option value="2025">2025</option>
+                                        <option value="2024">2024</option>
+                                        <option value="2023">2023</option>
+                                        <option value="2022">2022</option>
+                                    </select>
+                                    <select class="brd-none month-select" id="month_@inafantIdx" required>
+                                        <option value="" disabled selected>Month</option>
+                                        <option value="0">January</option>
+                                        <option value="1">February</option>
+                                        <option value="2">March</option>
+                                        <option value="3">April</option>
+                                        <option value="4">May</option>
+                                        <option value="5">June</option>
+                                        <option value="6">July</option>
+                                        <option value="7">August</option>
+                                        <option value="8">September</option>
+                                        <option value="9">October</option>
+                                        <option value="10">November</option>
+                                        <option value="11">December</option>
+                                    </select>
+                                    <select class="brd-none day-select" id="day_@inafantIdx" required>
+                                        <option value="" disabled selected>Day</option>
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5</option>
+                                        <option value="6">6</option>
+                                        <option value="7">7</option>
+                                        <option value="8">8</option>
+                                        <option value="9">9</option>
+                                        <option value="10">10</option>
+                                        <option value="11">11</option>
+                                        <option value="12">12</option>
+                                        <option value="13">13</option>
+                                        <option value="14">14</option>
+                                        <option value="15">15</option>
+                                        <option value="16">16</option>
+                                        <option value="17">17</option>
+                                        <option value="18">18</option>
+                                        <option value="19">19</option>
+                                        <option value="20">20</option>
+                                        <option value="21">21</option>
+                                        <option value="22">22</option>
+                                        <option value="23">23</option>
+                                        <option value="24">24</option>
+                                        <option value="25">25</option>
+                                        <option value="26">26</option>
+                                        <option value="27">27</option>
+                                        <option value="28">28</option>
+                                        <option value="29">29</option>
+                                        <option value="30">30</option>
+                                        <option value="31">31</option>
+                                    </select>
                                 </div>
 
                             </div>
                             <div class="validation-message-Required error-message" style="color: red; display: none;"></div>
                         </div>
-
+                        inafantIdx++;
 
                     }
                 }
@@ -458,8 +535,8 @@
             const fieldsToValidate = [
                 { className: 'contactFname', errorMessage: 'First name is required', validationdata: /^[A-Za-z]{1,32}$/ },
                 { className: 'contactLname', errorMessage: 'Last name is required', validationdata: /^[A-Za-z]{1,32}$/ },
-                { className: 'contactemail', errorMessage: 'Email is invalid', validationdata: /^(?!.*\.\.)[^\s@@]+@@[^\s@@]+\.[^\s@@]+$/ },
-                { className: 'contactphone', errorMessage: 'Phone number at least 10 digits', validationdata: /^\d{10,}$/ }
+                { className: 'contactemail', errorMessage: 'Email is invalid', validationdata: /^\w+([\.-]?\w+)*@@\w+([\.-]?\w+)*(\.\w{2,3})+$/ },
+                { className: 'contactphone', errorMessage: 'Phone number at least 10 digits', validationdata: /^[1-9][0-9]{9}$/ }
             ];
 
             let firstInvalidElement = null;
@@ -489,7 +566,15 @@
                                 firstInvalidElement = element;
                             }
                         }
-                    } else if (field.className === 'contactphone' && element.value.trim().length < 10) {
+                    }
+
+                    else if (element.value.trim().startsWith('0')) {
+                        showError(element, 'Phone number cannot start with 0');
+                        if (!firstInvalidElement) {
+                            firstInvalidElement = element;
+                        }
+                    }
+                    else if (field.className === 'contactphone' && element.value.trim().length < 10) {
                         // If the phone number has fewer than 10 digits, show an error message
                         showError(element, 'Phone number must be at least 10 digits');
                         if (!firstInvalidElement) {
@@ -567,6 +652,46 @@
                 var month = parseInt(document.getElementById("month_" + inafantIdx).value) + 1;
                 var day = document.getElementById("day_" + inafantIdx).value;
                 var dob = year + "-" + month + "-" + day;
+                /****************************/
+                if (month === 2) {
+                    if (!isValidFebruaryDay(year, day)) {
+                        alert("Invalid date! For February, the day must be 1-28 for a non-leap year or 1-29 for a leap year.");
+                        return false;
+                    }
+                }
+
+
+                else if (month === 4) {
+                    if (day > 30) {
+                        alert("Invalid date! April has only 30 days.");
+                        return false;
+                    }
+                }
+
+                else if (month === 6) {
+                    if (day > 30) {
+                        alert("Invalid date! June has only 30 days.");
+                        return false;
+                    }
+                }
+
+                else if (month === 9) {
+                    if (day > 30) {
+                        alert("Invalid date! September has only 30 days.");
+                        return false;
+                    }
+                }
+
+                else if (month === 11) {
+                    if (day > 30) {
+                        alert("Invalid date! November has only 30 days.");
+                        return false;
+                    }
+                }
+                /************************* */
+
+                document.getElementById(`dobHidden_${inafantIdx}`).value = dob; // Date of birth
+
                 if (year == "") {
                     alert("Please select year for infant date-of-birth");
                     return false;
@@ -660,9 +785,9 @@
             /*******Validation End*********/
             var enteredData = "";
             for (var i = 0; i < @Model.passeengerlist.passengers.Count; i++) {
-                var firstName = $("input[name='passengerdetails[" + i + "].First']").val();
-                var lastName = $("input[name='passengerdetails[" + i + "].Last']").val();
-                var title = $("select[name='passengerdetails[" + i + "].Title']").val();
+                var firstName = $("input[name='passengerdetails[" + i + "].First']").val().toUpperCase();
+                var lastName = $("input[name='passengerdetails[" + i + "].Last']").val().toUpperCase();
+                var title = $("select[name='passengerdetails[" + i + "].Title']").val().toUpperCase();
                 var Passengertypecode = $("input[name='passengerdetails[" + i + "].passengertypecode']").val();
                 if (Passengertypecode == "ADT") { Passengertypecode = "Adult"; }
                 if (Passengertypecode == "CHD") { Passengertypecode = "Child"; }
@@ -675,7 +800,26 @@
             $('#dataPopup').modal('show');
 
         });
-    
+
+        /************************************************************/
+        function isValidFebruaryDay(year, day) {
+            year = parseInt(year);
+            day = parseInt(day);
+
+            // Check for leap year
+            var isLeapYear = (year % 4 === 0 && year % 100 !== 0) || (year % 400 === 0);
+
+            // Valid days for February
+            if (isLeapYear) {
+                return day >= 1 && day <= 29;
+            } else {
+                return day >= 1 && day <= 28;
+            }
+        }
+        /************************************************************/
+
+
+
         $("#ContinueData").click(function () {
             $('#passengers_id').hide(); //Contact Details Div Hide
             //*************Validation effect Start**********
