--- a/OnionConsumeWebAPI/Views/GDSTripsell/_GDSTripsellPatialView.cshtml
+++ b/OnionConsumeWebAPI/Views/GDSTripsell/_GDSTripsellPatialView.cshtml
@@ -654,7 +654,7 @@
                                         {
 
                                             <span class="tooltipF">
-                                                Fare Type:  @Faretype<b>Premium Comfort Plus</b>
+                                                Fare Type:  @Faretype<b>Premium Flex</b>
                                                 <span class="tooltiptext">
                                                     <ul>
                                                         <li>1: Cabin Bag: 7 k.g</li>
@@ -672,7 +672,7 @@
                                         {
 
                                             <span class="tooltipF">
-                                                Fare Type:  @Faretype<b>Premium Comfort Plus</b>
+                                                Fare Type:  @Faretype<b>Eco Flex</b>
                                                 <span class="tooltiptext">
                                                     <ul>
                                                         <li>1: Cabin Bag: 7 k.g</li>
@@ -690,7 +690,7 @@
                                         {
 
                                             <span class="tooltipF">
-                                                Fare Type:  @Faretype<b>Premium Comfort Plus</b>
+                                                Fare Type:  @Faretype<b>Eco Value</b>
                                                 <span class="tooltiptext">
                                                     <ul>
                                                         <li>1: Cabin Bag: 7 k.g</li>
@@ -708,7 +708,7 @@
                                         {
 
                                             <span class="tooltipF">
-                                                Fare Type:  @Faretype<b>Premium Comfort Plus</b>
+                                                Fare Type:  @Faretype<b>Eco Classic</b>
                                                 <span class="tooltiptext">
                                                     <ul>
                                                         <li>1: Cabin Bag: 7 k.g</li>
