--- a/OnionConsumeWebAPI/Views/RoundAATripsell/_ServiceRequestsPartialView.cshtml
+++ b/OnionConsumeWebAPI/Views/RoundAATripsell/_ServiceRequestsPartialView.cshtml
@@ -664,7 +664,7 @@
                                                                 string Mealcode = Model.MealslistRT[0].legSsrs[l].legssrs[s].ssrCode + "_" + Model.MealslistRT[0].legSsrs[l].legssrs[s].legpassengers[0].price + "_" + "OneWay0" + "_" + Model.MealslistRT[0].legSsrs[l].legssrs[s].legpassengers[0].Airline;
                                                                 //  string MealcodeData = Mealcode.StartsWith("V", StringComparison.OrdinalIgnoreCase).ToString();
                                                                 AirLine = Model.MealslistRT[0].legSsrs[l].legssrs[s].legpassengers[0].Airline.ToString();
-                                                                string Mealname = Model.MealslistRT[0].legSsrs[l].legssrs[s].ssrCode + "=" + Model.MealslistRT[0].legSsrs[l].legssrs[s].name + " ₹" + @Model.MealslistRT[0].legSsrs[l].legssrs[s].legpassengers[0].price;
+                                                                string Mealname = Model.MealslistRT[0].legSsrs[l].legssrs[s].ssrCode + "-" + Model.MealslistRT[0].legSsrs[l].legssrs[s].name + " ₹" + @Model.MealslistRT[0].legSsrs[l].legssrs[s].legpassengers[0].price;
                                                                 ssrkeyAA = Model.MealslistRT[0].legSsrs[l].legssrs[s].legpassengers[pas].ssrKey + "_" + @Model.MealslistRT[0].legSsrs[l].legssrs[s].legpassengers[0].price + "_" + "OneWay0" + "_" + Model.MealslistRT[0].legSsrs[l].legssrs[s].legpassengers[0].Airline;
                                                                 // if (AirLine.ToLower() == "airasia" || AirLine.ToLower() == "akasaair")
                                                                 // {
