dated 10-02-2025 Seat meal

--- a/OnionConsumeWebAPI/Views/CommitBooking/booking.cshtml
+++ b/OnionConsumeWebAPI/Views/CommitBooking/booking.cshtml
@@ -481,7 +481,7 @@
                                     <tr>
                                         <th rowspan="2" class="align-middle">Passenger</th>
                                         <th colspan="2" class="text-center">Fllight Detail</th>
-                                        <th rowspan="2" class="align-middle">Meal Type</th>
+                                        <th rowspan="2" class="align-middle">Meal</th>
                                         <th rowspan="2" class="align-middle">Extra Bag(Kg)</th>
                                         <th rowspan="2" class="align-middle">Insurance Status</th>
                                     </tr>
@@ -518,7 +518,8 @@
                                                     // }
                                                 }
                                                 <td>@Model.AirlinePNR[0].journeys[0].segments[i3].designator.origin - @Model.AirlinePNR[0].journeys[0].segments[i3].designator.destination </td>
-                                                <td>@Model.AirlinePNR[0].journeys[0].segments[i3].identifier.carrierCode - @Model.AirlinePNR[0].journeys[0].segments[i3].identifier.identifier</td>
+                                                <td colspan="1">@Model.AirlinePNR[0].journeys[0].segments[i3].identifier.carrierCode - @Model.AirlinePNR[0].journeys[0].segments[i3].identifier.identifier</td>
+                                              
 
                                                 @{
                                                     string hashdata = @Model.AirlinePNR[0].passengers[i2].passengerKey + "_" + @Model.AirlinePNR[0].journeys[0].segments[i3].designator.origin + "_" + @Model.AirlinePNR[0].journeys[0].segments[i3].designator.destination;
@@ -534,15 +535,16 @@
                                                             foreach (var item in meal)
                                                             {
                                                                 <td>@item.MealCode</td>
-                                                                //THIS IS FOR MEAL
-                                                                // <td>@item.MealImage</td>
+                                                                
                                                             }
+
+                                                           
                                                         }
-                                                        // <td>@htmeal[hashdata]</td>
+                                                       
                                                     }
                                                     else
                                                     {
-                                                        <td></td>
+                                                        <td>NA</td>
                                                     }
                                                     // string hashBagdata = @Model.AirlinePNR[0].passengers[i2].passengerKey + "_" + @Model.AirlinePNR[0].journeys[0].segments[i3].designator.origin + "_" + @Model.AirlinePNR[0].journeys[0].segments[i3].designator.destination;
                                                     // if (htbag != null)
@@ -565,22 +567,18 @@
 
                                                                     <td>@item.MealImage</td>
                                                                 }
-                                                                else
-                                                                {
-                                                                    <td></td>
-                                                                }
-                                                                //THIS IS FOR BAGGAGE.
+                                                               
                                                             }
                                                         }
                                                     }
                                                     else
                                                     {
-                                                        <td></td>
+                                                        <td>NA</td>
                                                     }
 
                                                 }
 
-                                                <td>Confirm</td>
+                                                <td>NA</td>
                                             </tr>
                                         }
                                     }
