--- a/OnionConsumeWebAPI/Views/RoundTrip/_RTFlightResultsSortingPartialView.cshtml
+++ b/OnionConsumeWebAPI/Views/RoundTrip/_RTFlightResultsSortingPartialView.cshtml
@@ -999,16 +999,16 @@
                                             }
 
 
+                                            //COMMENT DATE '07-02-2025' FOR 2 STOP DATA ADD EXTRA
+                                            // @if (Model.SimpleAvailibilityaAddResponcelistR[j].segments.Count >= 2 && Model.SimpleAvailibilityaAddResponcelistR[j].segments[1].legs.Count >= 1)
+                                            // {
+                                            //     <div class="r-stop"> @Model.SimpleAvailibilityaAddResponcelistR[j].segments[1].legs[0].designator.destination</div>
+                                            // }
+                                            // else
+                                            // {
+                                               
 
-                                            @if (Model.SimpleAvailibilityaAddResponcelistR[j].segments.Count >= 2 && Model.SimpleAvailibilityaAddResponcelistR[j].segments[1].legs.Count >= 1)
-                                            {
-                                                <div class="r-stop"> @Model.SimpleAvailibilityaAddResponcelistR[j].segments[1].legs[0].designator.destination</div>
-                                            }
-                                            else
-                                            {
-                                                // <div class="mt-1">2 Stop via  @Model.SimpleAvailibilityaAddResponcelist[j].segments[1].legs[0].designator.destination  <b>,</b></div>
-
-                                            }
+                                            // }
                                         }
                                     }
                                     if (stops == 3)
